separate article emblem component

--- a/src/pages/blog/test.mdx
+++ b/src/pages/blog/test.mdx
@@ -7,6 +7,12 @@ img: https://images.pexels.com/photos/6847780/pexels-photo-6847780.jpeg?auto=com
 description: Test article
 tags:
   - test
+  - test
+  - test
+  - test
+  - test
+  - test
+
 ---
 
 lorem ipsum
